apple/Sources/UniFFI/ant_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
uint64_t uniffi_ant_ffi_fn_method_client_graph_entry_check_existence(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_graph_entry_cost(void*_Nonnull ptr, void*_Nonnull key
);
uint64_t uniffi_ant_ffi_fn_method_client_graph_entry_get(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_graph_entry_put(void*_Nonnull ptr, void*_Nonnull entry, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_pointer_check_existence(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_pointer_cost(void*_Nonnull ptr, void*_Nonnull key
);
uint64_t uniffi_ant_ffi_fn_method_client_pointer_create(void*_Nonnull ptr, void*_Nonnull owner, void*_Nonnull target, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_pointer_get(void*_Nonnull ptr, void*_Nonnull addr
);
uint64_t uniffi_ant_ffi_fn_method_client_pointer_put(void*_Nonnull ptr, void*_Nonnull pointer, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_pointer_update(void*_Nonnull ptr, void*_Nonnull owner, void*_Nonnull target
);
uint64_t uniffi_ant_ffi_fn_method_client_pointer_update_from(void*_Nonnull ptr, void*_Nonnull current, void*_Nonnull owner, void*_Nonnull target
);
uint64_t uniffi_ant_ffi_fn_method_client_register_cost(void*_Nonnull ptr, void*_Nonnull owner
);
uint64_t uniffi_ant_ffi_fn_method_client_register_create(void*_Nonnull ptr, void*_Nonnull owner, RustBuffer value, RustBuffer payment
);
uint64_t uniffi_ant_ffi_fn_method_client_register_get(void*_Nonnull ptr, void*_Nonnull address
);
uint64_t uniffi_ant_ffi_fn_method_client_register_history_collect(void*_Nonnull ptr, void*_Nonnull address
);
uint64_t uniffi_ant_ffi_fn_method_client_register_update(void*_Nonnull ptr, void*_Nonnull owner, RustBuffer value, RustBuffer payment
);