dart/ant_ffi/lib/src/native/bindings.dart


  late final _uniffi_ant_ffi_fn_method_client_graph_entry_check_existencePtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Uint64 Function(
                      ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'uniffi_ant_ffi_fn_method_client_graph_entry_check_existence');
  late final _uniffi_ant_ffi_fn_method_client_graph_entry_check_existence =
      _uniffi_ant_ffi_fn_method_client_graph_entry_check_existencePtr
          .asFunction<
              int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_graph_entry_cost(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> key,
  ) {
    return _uniffi_ant_ffi_fn_method_client_graph_entry_cost(
      ptr,
      key,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_graph_entry_costPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_graph_entry_cost');
  late final _uniffi_ant_ffi_fn_method_client_graph_entry_cost =
      _uniffi_ant_ffi_fn_method_client_graph_entry_costPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_graph_entry_get(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> addr,
  ) {
    return _uniffi_ant_ffi_fn_method_client_graph_entry_get(
      ptr,
      addr,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_graph_entry_getPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_graph_entry_get');
  late final _uniffi_ant_ffi_fn_method_client_graph_entry_get =
      _uniffi_ant_ffi_fn_method_client_graph_entry_getPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_graph_entry_put(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> entry,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_graph_entry_put(
      ptr,
      entry,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_graph_entry_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_graph_entry_put');
  late final _uniffi_ant_ffi_fn_method_client_graph_entry_put =
      _uniffi_ant_ffi_fn_method_client_graph_entry_putPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_pointer_check_existence(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> addr,
  ) {
    return _uniffi_ant_ffi_fn_method_client_pointer_check_existence(
      ptr,
      addr,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_pointer_check_existencePtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Uint64 Function(
                      ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'uniffi_ant_ffi_fn_method_client_pointer_check_existence');
  late final _uniffi_ant_ffi_fn_method_client_pointer_check_existence =
      _uniffi_ant_ffi_fn_method_client_pointer_check_existencePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_pointer_cost(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> key,
  ) {
    return _uniffi_ant_ffi_fn_method_client_pointer_cost(
      ptr,
      key,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_pointer_costPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_pointer_cost');
  late final _uniffi_ant_ffi_fn_method_client_pointer_cost =
      _uniffi_ant_ffi_fn_method_client_pointer_costPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_pointer_create(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> owner,
    ffi.Pointer<ffi.Void> target,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_pointer_create(
      ptr,
      owner,
      target,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_pointer_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_pointer_create');
  late final _uniffi_ant_ffi_fn_method_client_pointer_create =
      _uniffi_ant_ffi_fn_method_client_pointer_createPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_pointer_get(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> addr,
  ) {
    return _uniffi_ant_ffi_fn_method_client_pointer_get(
      ptr,
      addr,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_pointer_getPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_pointer_get');
  late final _uniffi_ant_ffi_fn_method_client_pointer_get =
      _uniffi_ant_ffi_fn_method_client_pointer_getPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_pointer_put(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> pointer,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_pointer_put(
      ptr,
      pointer,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_pointer_putPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_pointer_put');
  late final _uniffi_ant_ffi_fn_method_client_pointer_put =
      _uniffi_ant_ffi_fn_method_client_pointer_putPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_pointer_update(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> owner,
    ffi.Pointer<ffi.Void> target,
  ) {
    return _uniffi_ant_ffi_fn_method_client_pointer_update(
      ptr,
      owner,
      target,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_pointer_updatePtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
                  ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_pointer_update');
  late final _uniffi_ant_ffi_fn_method_client_pointer_update =
      _uniffi_ant_ffi_fn_method_client_pointer_updatePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_pointer_update_from(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> current,
    ffi.Pointer<ffi.Void> owner,
    ffi.Pointer<ffi.Void> target,
  ) {
    return _uniffi_ant_ffi_fn_method_client_pointer_update_from(
      ptr,
      current,
      owner,
      target,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_pointer_update_fromPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_pointer_update_from');
  late final _uniffi_ant_ffi_fn_method_client_pointer_update_from =
      _uniffi_ant_ffi_fn_method_client_pointer_update_fromPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_register_cost(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> owner,
  ) {
    return _uniffi_ant_ffi_fn_method_client_register_cost(
      ptr,
      owner,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_register_costPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_register_cost');
  late final _uniffi_ant_ffi_fn_method_client_register_cost =
      _uniffi_ant_ffi_fn_method_client_register_costPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_register_create(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> owner,
    RustBuffer value,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_register_create(
      ptr,
      owner,
      value,
      payment,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_register_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Uint64 Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Void>,
              RustBuffer,
              RustBuffer)>>('uniffi_ant_ffi_fn_method_client_register_create');
  late final _uniffi_ant_ffi_fn_method_client_register_create =
      _uniffi_ant_ffi_fn_method_client_register_createPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>, RustBuffer,
              RustBuffer)>();

  int uniffi_ant_ffi_fn_method_client_register_get(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> address,
  ) {
    return _uniffi_ant_ffi_fn_method_client_register_get(
      ptr,
      address,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_register_getPtr = _lookup<
          ffi.NativeFunction<
              ffi.Uint64 Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
      'uniffi_ant_ffi_fn_method_client_register_get');
  late final _uniffi_ant_ffi_fn_method_client_register_get =
      _uniffi_ant_ffi_fn_method_client_register_getPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_register_history_collect(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> address,
  ) {
    return _uniffi_ant_ffi_fn_method_client_register_history_collect(
      ptr,
      address,
    );
  }

  late final _uniffi_ant_ffi_fn_method_client_register_history_collectPtr =
      _lookup<
              ffi.NativeFunction<
                  ffi.Uint64 Function(
                      ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>>(
          'uniffi_ant_ffi_fn_method_client_register_history_collect');
  late final _uniffi_ant_ffi_fn_method_client_register_history_collect =
      _uniffi_ant_ffi_fn_method_client_register_history_collectPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Void>)>();

  int uniffi_ant_ffi_fn_method_client_register_update(
    ffi.Pointer<ffi.Void> ptr,
    ffi.Pointer<ffi.Void> owner,
    RustBuffer value,
    RustBuffer payment,
  ) {
    return _uniffi_ant_ffi_fn_method_client_register_update(
      ptr,
      owner,
      value,
      payment,
    );
  }
